<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="@color/white"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:id="@+id/linearLayoutContainerLogo"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/imageViewLogo"
                android:layout_width="27dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/logo"
                android:src="@drawable/ic_logo"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/textViewTitleLogo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:gravity="center_vertical"
                android:text="@string/todo_app"
                android:textColor="@color/pattern_blue"
                android:textFontWeight="700"
                android:textSize="24sp" />
        </LinearLayout>

        <EditText
            android:inputType="textEmailAddress|textNoSuggestions"
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints=""
            android:gravity="bottom"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:textColor="@color/black"
            android:textColorHint="@color/lightgray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutContainerLogo"
            tools:ignore="VisualLintTextFieldSize"
            android:background="@android:color/transparent"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightgray"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
            />

        <EditText
            android:inputType="textPassword|textNoSuggestions"
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints=""
            android:textColorHint="@color/lightgray"
            android:gravity="bottom"
            android:hint="@string/senha"
            android:imeOptions="actionNext"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
            tools:ignore="VisualLintTextFieldSize"
            android:background="@android:color/transparent" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightgray"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
            />

        <EditText
            android:inputType="textPassword|textNoSuggestions"
            android:id="@+id/editTextConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints=""
            android:textColorHint="@color/lightgray"
            android:gravity="bottom"
            android:hint="@string/confirmar_senha"
            android:imeOptions="actionNext"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
            tools:ignore="VisualLintTextFieldSize"
            android:background="@android:color/transparent" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightgray"
            app:layout_constraintTop_toBottomOf="@+id/editTextConfirmPassword"
            />

        <TextView
            android:id="@+id/textViewPasswordError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/as_senhas_devem_ser_iguais"
            android:textColor="#d0342c"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/buttonRegister"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextConfirmPassword"
            tools:ignore="VisualLintOverlap,TextContrastCheck" />

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#3BC3EF"
            android:text="@string/registrar"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextConfirmPassword"
            tools:ignore="VisualLintButtonSize"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/textViewAlreadyHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:minHeight="48dp"
            android:onClick="onLogin"
            android:text="@string/ja_possui_conta"
            android:textColor="@color/pattern_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.46"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonRegister"
            android:layout_marginTop="5dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

