<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="@color/white"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="20dp">

        <LinearLayout
            android:id="@+id/linearLayoutContainerLogo"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/imageViewLogo"
                android:layout_width="27dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/logo"
                android:src="@drawable/ic_logo"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/textViewTitleLogo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:gravity="center_vertical"
                android:text="@string/todo_app"
                android:textColor="@color/pattern_blue"
                android:textFontWeight="700"
                android:textSize="24sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="bottom"
            android:textColor="@color/black"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/lightgray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutContainerLogo"
            app:layout_constraintBottom_toTopOf="@id/editTextPassword"
            android:autofillHints=""
            tools:ignore="VisualLintTextFieldSize"
            android:background="@android:color/transparent"
            android:backgroundTint="@android:color/transparent"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightgray"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
            />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints=""
            android:gravity="bottom"
            android:hint="@string/senha"
            android:textColor="@color/black"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:textColorHint="@color/lightgray"
            app:layout_constraintBottom_toTopOf="@id/buttonLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
            tools:ignore="VisualLintTextFieldSize"
            android:background="@android:color/transparent"
            android:backgroundTint="@android:color/transparent"

            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightgray"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
            />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#3BC3EF"
            android:text="@string/entrar"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/textViewAlreadyHaveAccount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
            tools:ignore="VisualLintButtonSize"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/textViewAlreadyHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:minHeight="48dp"
            android:onClick="onCreateAccount"
            android:text="@string/nao_possui_conta"
            android:textColor="@color/pattern_blue"
            app:layout_constraintBottom_toTopOf="@+id/login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
            android:layout_marginTop="5dp"/>

        <com.facebook.login.widget.DeviceLoginButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:minHeight="48dp"
            android:text="@string/continuar_com_facebook"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewAlreadyHaveAccount" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

